--- a/Rahtk.Application/Rahtk.Application.csproj
+++ b/Rahtk.Application/Rahtk.Application.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <None Remove="Features\" />
     <None Remove="Features\User\" />
+    <None Remove="Common\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\" />
     <Folder Include="Features\User\" />
+    <Folder Include="Common\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rahtk.Domain\Rahtk.Domain.csproj" />
