--- a/Rahtk.Shared/Rahtk.Shared.csproj
+++ b/Rahtk.Shared/Rahtk.Shared.csproj
@@ -13,12 +13,14 @@
     <None Remove="Services\" />
     <None Remove="Exceptions\" />
     <None Remove="Models\" />
+    <None Remove="Localization\Resources\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Localization\" />
     <Folder Include="Services\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Models\" />
+    <Folder Include="Localization\Resources\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.4" />
