--- a/Rahtk.Api/appsettings.Development.json
+++ b/Rahtk.Api/appsettings.Development.json
@@ -12,5 +12,10 @@
     "Key": "OC3PMQ2SUUH45OXFIRR7XXIUBN6FWD3Z",
     "Issuer": "https://localhost:7053",
     "Audience": "https://localhost:7053"
+  },
+  "SendGrid": {
+    "SendGridUser": "NoReply",
+    "SendGridEmail": "a.ramadan@arabresourcegroup.com",
+    "SendGridKey": "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"
   }
 }
