--- a/Rahtk.Api/appsettings.json
+++ b/Rahtk.Api/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:localhost,1433;Database=rahtak;User=sa;TrustServerCertificate=true;Password=Ayman@2023; MultipleActiveResultSets=false"
+    "DefaultConnection": "Server=db4558.databaseasp.net; Database=db4558; User Id=db4558; Password=pE+4?2ZwP!j9; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -13,6 +13,11 @@
     "Key": "OC3PMQ2SUUH45OXFIRR7XXIUBN6FWD3Z",
     "Issuer": "https://localhost:7053",
     "Audience": "https://localhost:7053"
+  },
+  "SendGrid": {
+    "SendGridUser": "NoReply",
+    "SendGridEmail": "a.ramadan@arabresourcegroup.com",
+    "SendGridKey": "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"
   }
 }
 
