--- a/Rahtk.Api/appsettings.json
+++ b/Rahtk.Api/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db4558.databaseasp.net; Database=db4558; User Id=db4558; Password=pE+4?2ZwP!j9; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=db4630.databaseasp.net; Database=db4630; User Id=db4630; Password=Le7@b=G6?5rR; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
