finish sending email, forget password

--- a/Rahtk.Api/appsettings.Development.json
+++ b/Rahtk.Api/appsettings.Development.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db4630.public.databaseasp.net; Database=db4630; User Id=db4630; Password=Le7@b=G6?5rR; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=tcp:localhost,1433;Database=rahtak;User=sa;TrustServerCertificate=true;Password=Ayman@2023; MultipleActiveResultSets=false"
+
   },
   "Logging": {
     "LogLevel": {
@@ -12,5 +13,9 @@
     "Key": "OC3PMQ2SUUH45OXFIRR7XXIUBN6FWD3Z",
     "Issuer": "https://localhost:7053",
     "Audience": "https://localhost:7053"
+  },
+  "Email": {
+    "Email": "aymantesting555@gmail.com",
+    "Password": "kaqk bsia fsdv zgop"
   }
 }
