--- a/Rahtk.Api/appsettings.json
+++ b/Rahtk.Api/appsettings.json
@@ -13,6 +13,9 @@
     "Key": "OC3PMQ2SUUH45OXFIRR7XXIUBN6FWD3Z",
     "Issuer": "https://localhost:7053",
     "Audience": "https://localhost:7053"
+  },
+  "Email": {
+    "Email": "aymantesting555@gmail.com",
+    "Password": "kaqk bsia fsdv zgop"
   }
 }
-
