--- a/Rahtk.Contracts/Rahtk.Contracts.csproj
+++ b/Rahtk.Contracts/Rahtk.Contracts.csproj
@@ -20,4 +20,7 @@
     <ProjectReference Include="..\Rahtk.Domain\Rahtk.Domain.csproj" />
     <ProjectReference Include="..\Rahtk.Shared\Rahtk.Shared.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" />
+  </ItemGroup>
 </Project>
