--- a/Rahtk.Application/Rahtk.Application.csproj
+++ b/Rahtk.Application/Rahtk.Application.csproj
@@ -10,15 +10,24 @@
     <None Remove="Features\" />
     <None Remove="Features\User\" />
     <None Remove="Common\" />
+    <None Remove="Features\product\" />
+    <None Remove="Features\category\" />
+    <None Remove="Features\category\DTO\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\" />
     <Folder Include="Features\User\" />
     <Folder Include="Common\" />
+    <Folder Include="Features\product\" />
+    <Folder Include="Features\category\" />
+    <Folder Include="Features\category\DTO\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rahtk.Domain\Rahtk.Domain.csproj" />
     <ProjectReference Include="..\Rahtk.Shared\Rahtk.Shared.csproj" />
     <ProjectReference Include="..\Rahtk.Contracts\Rahtk.Contracts.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 </Project>
