--- a/Rahtk.Contracts/Rahtk.Contracts.csproj
+++ b/Rahtk.Contracts/Rahtk.Contracts.csproj
@@ -10,11 +10,15 @@
     <None Remove="Features\" />
     <None Remove="Features\User\" />
     <None Remove="Common\" />
+    <None Remove="Features\products\" />
+    <None Remove="Features\products\Category\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\" />
     <Folder Include="Features\User\" />
     <Folder Include="Common\" />
+    <Folder Include="Features\products\" />
+    <Folder Include="Features\products\Category\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rahtk.Domain\Rahtk.Domain.csproj" />
