--- a/Rahtk.Domain/Rahtk.Domain.csproj
+++ b/Rahtk.Domain/Rahtk.Domain.csproj
@@ -10,11 +10,13 @@
     <None Remove="Features\" />
     <None Remove="Features\User\" />
     <None Remove="Common\" />
+    <None Remove="Features\Categories\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\" />
     <Folder Include="Features\User\" />
     <Folder Include="Common\" />
+    <Folder Include="Features\Categories\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
