--- a/Rahtk.Api/appsettings.Development.json
+++ b/Rahtk.Api/appsettings.Development.json
@@ -1,8 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:localhost,1433;Database=rahtak;User=sa;TrustServerCertificate=true;Password=Ayman@2023; MultipleActiveResultSets=false",
-    "HangfireConnection": "Server=tcp:localhost,1433;Database=HangfireDb;User=sa;TrustServerCertificate=true;Password=Ayman@2023; MultipleActiveResultSets=false"
-
+    "DefaultConnection": "Server=tcp:localhost,1433;Database=rahtak;User=sa;TrustServerCertificate=true;Password=Ayman@2023; MultipleActiveResultSets=false"
   },
   "Logging": {
     "LogLevel": {
