--- a/Rahtk.Contracts/Rahtk.Contracts.csproj
+++ b/Rahtk.Contracts/Rahtk.Contracts.csproj
@@ -16,7 +16,7 @@
     <None Remove="Features\Address\" />
     <None Remove="Features\Payment\" />
     <None Remove="Features\Order\" />
-    <None Remove="Features\Drug\" />
+    <None Remove="Features\Reminder\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\" />
@@ -28,7 +28,7 @@
     <Folder Include="Features\Address\" />
     <Folder Include="Features\Payment\" />
     <Folder Include="Features\Order\" />
-    <Folder Include="Features\Drug\" />
+    <Folder Include="Features\Reminder\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rahtk.Domain\Rahtk.Domain.csproj" />
