--- a/Rahtk.Api/appsettings.json
+++ b/Rahtk.Api/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=db4630.public.databaseasp.net; Database=db4630; User Id=db4630; Password=Le7@b=G6?5rR; Encrypt=False; MultipleActiveResultSets=True;"
-  },
+"ConnectionStrings": {
+    "DefaultConnection": "Server=db5912.public.databaseasp.net; Database=db5912; User Id=db5912; Password=Q=b9!f5MJ6_y; Encrypt=False; MultipleActiveResultSets=True;"
+ },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
